# visao-clinica

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  PROMPT.md  Package.swift  README.md  REFERENCES.md  RELEASING.md  REQUISITOS_MVP.md  SECURITY.md  VisaoClinica.spec  pyproject.toml  requirements.txt  run.sh  run_app.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  clinical_accuracy.md  feature_request.md
.github/workflows/: ci.yml
Resources/: Info.plist
Sources/VisaoClinica/: AppModel.swift  IconGenerator.swift  SelfTest.swift  VisaoClinicaApp.swift
Sources/VisaoClinica/Camera/: CameraController.swift
Sources/VisaoClinica/Clinical/: Clinical.swift
Sources/VisaoClinica/Signal/: DSP.swift
app/: __init__.py  main.py  paths.py
app/ai/: bitnet_backend.py  bootstrap.py
app/clinical/: conditions.py  nr01.py  nr01_aggregate.py  reasoning_engine.py  validation.py  wellness.py
app/report/: exporter.py
app/security/: __init__.py  governance.py
app/storage/: db.py
app/ui/: main_window.py  settings.py  theme.py
app/vision/: blendshape_features.py  extractor.py  face_landmarker.py  features.py  motor_face.py  oculomotor.py  rppg.py  signal.py  vitals.py
docs/: index.html
scripts/: build_macos.sh  e2e_llm.py  make_app_bundle.sh  make_app_personas.py  make_face_shot.py  make_faces.py  make_real_faces.py  setup_bitnet.sh
tests/: test_advanced_biomarkers.py  test_blendshapes.py  test_conditions.py  test_engine.py  test_governance.py  test_metrics.py  test_nr01.py  test_nr01_aggregate.py  test_signal.py  test_validation.py  test_vitals.py
(+7 files in other folders)
