[project]
name = "visao-clinica"
version = "0.1.0"
description = "Triagem clínica por visão computacional + IA local (BitNet b1.58 2B4T)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Dheiver Santos" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Intended Audience :: Healthcare Industry",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "PySide6>=6.6",
    "opencv-python>=4.9",
    "mediapipe==0.10.14",
    "numpy>=1.26",
    "scipy>=1.11",
    "dask[complete]>=2024.1",
    "torch>=2.2",
    "transformers>=4.50,<6",
    "accelerate>=0.30",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "pre-commit>=3.7"]

[project.urls]
Homepage = "https://github.com/dheiver2/visao-clinica"
Issues = "https://github.com/dheiver2/visao-clinica/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["build", "dist", ".venv", "vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/ui/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
